--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,7 @@
-<nav>
-    <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
-    </ul>
+<nav class="nav-flex">
+    <div>Home</div>
+    <div>Custom</div>
+    <div>Sedan</div>
+    <div>SUV</div>
+    <div>Truck</div>
 </nav>
