--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,10 @@
 
 .nav-flex {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .nav-flex div {
