--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,16 +5,154 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-background: #fff;
+  --main-accent: #01b0d3;
+}
+
+body {
+  margin: 0;
+}
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.siteName {
+  order: 1;
+  font-size: 30px;
+}
+
+header a {
+  color: rgb(40, 2, 40);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#tools {
+  order: 2;
+}
+
+
+#wrapper {
+  background-color: var(--primary-background);
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 1em;
+}
+
+@media only screen and (min-width: 768px) {
+body {
+  background-image: linear-gradient(45deg, #000 25%, transparent 25%),
+  linear-gradient(45deg, transparent 75%, #000 75%),
+  linear-gradient(45deg, transparent 75%, #000 75%),
+  linear-gradient(45deg, #000 25%, #fff 25%);
+  background-size: 100px 100px;    
+  background-position: 0 0, 0 0, -50px -50px, 50px 50px;
+}
+
+#wrapper {
+  border: 5px solid var(--main-accent);
+  border-radius: 10px;
+  margin-top: 1rem;
+  padding: 1vw;
+  width: 75vw;
+  max-width: 1200px;
+}
+
 .nav-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 10%;
-  margin-right: 10%;
+  background-color: rgb(40, 2, 40);
+  padding: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .nav-flex div {
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
+  font-size: large;
+  color: white;
+  margin: 0 20px;
 }
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.top-portion {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.bottom-portion {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.upgrades {
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+  column-gap: 10px;
+  row-gap: 30px;
+}
+
+.flux {
+  grid-row: 2 / 3;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.flame {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.sticker {
+  grid-row: 3 / 4;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.hub-cap {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.reviews {
+  grid-column: 2 / 3;
+}
+
+.reviews ul li {
+  max-width: 100%;
+}
+
+
+}
+/* Don't add anything after this comment. */
