--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,50 @@
-<h1>Sheldon Uchytil</h1>
+<div class="top-portion">
+    <h1>Welcome to CSE Motors!</h1>
+
+    <div class="message-box">
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <h3>Own Today</h3>
+    </div>
+
+    <img src="../public/images/vehicles/delorean.jpg" alt="pic of car">
+</div>
+
+<div class="bottom-portion">
+    <div class="upgrades">
+        <h2>Delorean upgrades</h2>
+
+        <div class="flux">
+            <img src="../public/images/upgrades/flux-cap.png" alt="flux pic">
+            <a href="">Flux Capacitor</a>
+        </div>
+
+        <div class="flame">
+            <img src="../public/images/upgrades/flame.jpg" alt="flame pic">
+            <a href="">Flame Decals</a>
+        </div>
+
+        <div class="sticker">
+            <img src="../public/images/upgrades/bumper_sticker.jpg" alt="bumper_sticker pic">
+            <a href="">Bumper Stickers</a>
+        </div>
+
+        <div class="hub-cap">
+            <img src="../public/images/upgrades/hub-cap.jpg" alt="hub-cap pic">
+            <a href="">Hub Caps</a>
+        </div>
+    </div>
+    
+    <div class="reviews">
+        <h2>DMC Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </div>
+</div>
