--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 :root {
   --primary-background: #fff;
   --main-accent: #01b0d3;
@@ -12,6 +14,7 @@
 
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 #top-header {
@@ -39,10 +42,144 @@ header a {
 
 #wrapper {
   background-color: var(--primary-background);
-  width: 95%;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 1em;
+}
+
+img {
+  max-width: 100%;
+}
+
+.nav-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(40, 2, 40);
+  padding: 10px;
+}
+
+.nav-flex div {
+  font-size: large;
+  color: white;
+}
+
+.top-portion h1 {
+  font-size: x-large;
+}
+
+
+.message-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #01b0d3;
+}
+
+.own-button {
+  padding: 10px 20px; 
+  font-size: 14px; 
+  background-color: #01b0d3; 
+  color: black; 
+  border: 1.5px outset #808080;
+  border-radius: 1px;
+  font-weight: bold;
+}
+
+.own-button:active {
+  transform: translateY(2px);
+}
+
+.bottom-portion {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-bottom: 50px;
+}
+
+.upgrades {
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.upgrades h2 {
+  grid-column: 1 / 3;
+}
+
+.flux {
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.flame {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.sticker {
+  grid-row: 3 / 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.hub-cap {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #01b0d3;
+  border: 1.5px solid black;
+}
+
+.reviews {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+}
+
+.reviews h2 {
+  grid-column: 1 / 3;
+}
+
+.reviews ul {
+  grid-row: 2 / 4;
+  grid-column: 1 / 3;
+  font-size: large;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.reviews ul li {
+  margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -89,6 +226,41 @@ main {
 .top-portion {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
+  position: relative;
+  text-align: left;
+}
+
+.top-portion img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
+
+.message-box {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  color: #01b0d3;
+  font-size: larger;
+}
+
+.own-button {
+  padding: 20px 40px; 
+  font-size: 18px; 
+  background-color: #01b0d3; 
+  color: black; 
+  border: 3px outset #808080;
+  border-radius: 2px;
+  font-weight: bold;
+}
+
+.own-button:active {
+  transform: translateY(2px);
 }
 
 .bottom-portion {
@@ -96,9 +268,11 @@ main {
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 50px;
 }
 
 .upgrades {
+  grid-row: 1 / 3;
   grid-column: 1 / 2;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -107,11 +281,17 @@ main {
   row-gap: 30px;
 }
 
+.upgrades h2 {
+  grid-column: 1 / 3;
+}
+
 .flux {
   grid-row: 2 / 3;
-  text-align: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   background-color: #01b0d3;
   border: 1.5px solid black;
 }
@@ -119,18 +299,22 @@ main {
 .flame {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
-  text-align: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   background-color: #01b0d3;
   border: 1.5px solid black;
 }
 
 .sticker {
   grid-row: 3 / 4;
-  text-align: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   background-color: #01b0d3;
   border: 1.5px solid black;
 }
@@ -138,21 +322,42 @@ main {
 .hub-cap {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
-  text-align: center;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   background-color: #01b0d3;
   border: 1.5px solid black;
 }
 
 .reviews {
   grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 2fr;
+  column-gap: 10px;
+  row-gap: 30px;
+}
+
+.reviews h2 {
+  grid-column: 1 / 3;
+}
+
+.reviews ul {
+  grid-row: 2 / 4;
+  grid-column: 1 / 3;
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .reviews ul li {
-  max-width: 100%;
+  margin-bottom: 10px;
 }
-
 
 }
 /* Don't add anything after this comment. */
