--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,10 @@
         <p>3 Cup holders</p>
         <p>Superman doors</p>
         <p>Fuzzy dice!</p>
-        <h3>Own Today</h3>
+        <button class="own-button">Own Today</button>
     </div>
 
-    <img src="../public/images/vehicles/delorean.jpg" alt="pic of car">
+    <img src="./images/vehicles/delorean.jpg" alt="pic of car">
 </div>
 
 <div class="bottom-portion">
@@ -17,22 +17,22 @@
         <h2>Delorean upgrades</h2>
 
         <div class="flux">
-            <img src="../public/images/upgrades/flux-cap.png" alt="flux pic">
+            <img src="./images/upgrades/flux-cap.png" alt="flux pic">
             <a href="">Flux Capacitor</a>
         </div>
 
         <div class="flame">
-            <img src="../public/images/upgrades/flame.jpg" alt="flame pic">
+            <img src="./images/upgrades/flame.jpg" alt="flame pic">
             <a href="">Flame Decals</a>
         </div>
 
         <div class="sticker">
-            <img src="../public/images/upgrades/bumper_sticker.jpg" alt="bumper_sticker pic">
+            <img src="./images/upgrades/bumper_sticker.jpg" alt="bumper_sticker pic">
             <a href="">Bumper Stickers</a>
         </div>
 
         <div class="hub-cap">
-            <img src="../public/images/upgrades/hub-cap.jpg" alt="hub-cap pic">
+            <img src="./images/upgrades/hub-cap.jpg" alt="hub-cap pic">
             <a href="">Hub Caps</a>
         </div>
     </div>
