--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,7 +1,3 @@
 <nav class="nav-flex">
-    <div>Home</div>
-    <div>Custom</div>
-    <div>Sedan</div>
-    <div>SUV</div>
-    <div>Truck</div>
+    <%- nav %>
 </nav>
