--- a/views/inventory/vehicle.ejs
+++ b/views/inventory/vehicle.ejs
@@ -1,5 +1,9 @@
-<h1><%= title %></h1>
+<% if (title) { %>
+    <h1><%= title %></h1>
+    <% } else {
+      res.redirect('/')
+    } %>
 
 <%# messages() %>
 
-<%# grid %>
+<%- grid %>
