forms and validation added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <div class="top-portion">
     <h1>Welcome to CSE Motors!</h1>
+    <%- messages() %>
 
     <div class="message-box">
         <h2>DMC Delorean</h2>
