--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -217,6 +217,94 @@ nav ul li a:hover {
   padding: 0;
 }
 
+form * {
+  display: block;
+}
+
+.login-container {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  text-align: center;
+}
+.login-container form {
+  display: flex;
+  flex-direction: column;
+}
+.login-container form div {
+  margin-bottom: 15px;
+}
+.login-button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.login-button:hover {
+  background-color: #0056b3;
+}
+.signup-link {
+  text-decoration: none;
+  color: blue;
+  margin-top: 15px;
+  display: inline-block;
+}
+.signup-link span {
+  text-decoration: underline;
+}
+
+.registerForm {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+
+.registerForm label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.registerForm input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.registerForm input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.registerForm button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.registerForm button:hover {
+  background-color: #0056b3;
+}
+
+.passpg {
+  font-size: small;
+}
+
 
 @media only screen and (min-width: 768px) {
 body {
