--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,10 +6,18 @@
 
 <% messages() %>
 
+<% if (errors) { %>
+    <ul class="notice">
+   <% errors.array().forEach(error => { %>
+     <li><%= error.msg %></li>
+  <%  }) %>
+   </ul>
+  <% } %>
+
 <div class="login-container">
-<form>
+<form id="loginForm" action="/account/login" method="post">
   <label for="email">Email:</label><br>
-  <input type="email" id="email" name="account_email" required><br>
+  <input type="email" id="email" name="account_email" required value="<%= locals.account_email %>"><br>
   <label for="pass">Password:</label><br>
   <span class="passpg">Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character</span> 
   <input type="password" name="account_password" id="accountPassword" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br><br>
