--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -16,13 +16,13 @@
 
 <form class="registerForm" action="/account/register" method="post">
     <label for="first-name">First Name:</label>
-    <input type="text" id="first-name" name="account_firstname" placeholder="required" required>
+    <input type="text" id="first-name" name="account_firstname" placeholder="required" required value="<%= locals.account_firstname %>">
     <br>
     <label for="last-name">Last Name:</label>
-    <input type="text" id="last-name" name="account_lastname" placeholder="required" required>
+    <input type="text" id="last-name" name="account_lastname" placeholder="required" required value="<%= locals.account_lastname %>">
     <br>
     <label for="email">Email Address:</label>
-    <input type="email" id="email" name="account_email" placeholder="required" required>
+    <input type="email" id="email" name="account_email" placeholder="required" required value="<%= locals.account_email %>">
     <br>
     <label for="accountPassword">Password:</label> 
     <span class="passpg">Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character</span> 
