--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -7,6 +7,6 @@
 <% messages() %>
 
 <div class="vmlinks">
-    <a href="/inventory/addclassification">Add New Classification</a>
-    <a href="/inventory/create">Add New Vehicle</a>
+    <a href="/inv/addclassification">Add New Classification</a>
+    <a href="/inv/create">Add New Vehicle</a>
 </div>
