--- a/views/inventory/addclassification.ejs
+++ b/views/inventory/addclassification.ejs
@@ -6,6 +6,13 @@
 
 <% messages() %>
 
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
 
 <div class="login-container">
 <form action="/inventory/addclassification" method="post">
