new form added, need to update list

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -16,5 +16,5 @@
 
 <div class="vmlinks">
     <a href="/inv/addclassification">Add New Classification</a>
-    <a href="/inv/create">Add New Vehicle</a>
+    <a href="/inv/addinventory">Add New Vehicle</a>
 </div>
