--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -239,14 +239,14 @@ form * {
 .login-button {
   margin-top: 10px;
   padding: 10px;
-  background-color: #007bff;
-  color: white;
+  background-color: lightgray;
+  color: black;
   border: none;
   border-radius: 50px;
   cursor: pointer;
 }
 .login-button:hover {
-  background-color: #0056b3;
+  background-color: darkgray;
 }
 .signup-link {
   text-decoration: none;
@@ -289,16 +289,16 @@ form * {
 .registerForm button {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: lightgray;
   border: none;
   border-radius: 4px;
-  color: white;
+  color: black;
   font-size: 16px;
   cursor: pointer;
 }
 
 .registerForm button:hover {
-  background-color: #0056b3;
+  background-color: darkgray;
 }
 
 .passpg {
