--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -18,3 +18,11 @@
     <a href="/inv/addclassification">Add New Classification</a>
     <a href="/inv/addinventory">Add New Vehicle</a>
 </div>
+
+<h2>Manage Inventory</h2>
+<p>Select a Classification</p>
+<% classificationSelect %>
+<table id="inventoryDisplay"></table>
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
