update inventory added

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -19,10 +19,14 @@
     <a href="/inv/addinventory">Add New Vehicle</a>
 </div>
 
+<div>
 <h2>Manage Inventory</h2>
 <p>Select a Classification</p>
-<% classificationSelect %>
+<%- classificationSelect %>
 <table id="inventoryDisplay"></table>
+</div>
+
 <noscript>JavaScript must be enabled to use this page.</noscript>
+
 
 <script src="../../js/inventory.js"></script>
