--- a/views/inventory/editinventory.ejs
+++ b/views/inventory/editinventory.ejs
@@ -17,35 +17,35 @@
 <div class="login-container">
 <form action="/inv/edit" method="post">
     <label for="classification_id">Classification</label>
-    <%- list %>
+    <%- classificationSelect %>
     <br>
 
     <label for="inv_make">Make:</label>
-    <input type="text" id="inv_make" name="inv_make" required><br><br>
+    <input type="text" id="inv_make" name="inv_make" value="<%- inv_make %>" required><br><br>
 
     <label for="inv_model">Model:</label>
-    <input type="text" id="inv_model" name="inv_model" required><br><br>
+    <input type="text" id="inv_model" name="inv_model" value="<%- inv_model %>" required><br><br>
 
     <label for="inv_year">Year:</label>
-    <input type="text" id="inv_year" name="inv_year" maxlength="4" required><br><br>
+    <input type="text" id="inv_year" name="inv_year" value="<%- inv_year %>" maxlength="4" required><br><br>
 
     <label for="inv_description">Description:</label>
-    <textarea id="inv_description" name="inv_description" required></textarea><br><br>
+    <textarea id="inv_description" name="inv_description" required><% if(inv_description) { %><%= inv_description %><% } %></textarea><br><br>
 
     <label for="inv_image">Image URL:</label>
-    <input type="text" id="inv_image" name="inv_image" required><br><br>
+    <input type="text" id="inv_image" name="inv_image" value="<%- inv_image %>" required><br><br>
 
     <label for="inv_thumbnail">Thumbnail URL:</label>
-    <input type="text" id="inv_thumbnail" name="inv_thumbnail" required><br><br>
+    <input type="text" id="inv_thumbnail" name="inv_thumbnail" value="<%- inv_thumbnail %>" required><br><br>
 
     <label for="inv_price">Price:</label>
-    <input type="number" id="inv_price" name="inv_price" required><br><br>
+    <input type="number" id="inv_price" name="inv_price" value="<%- inv_price %>" required><br><br>
 
     <label for="inv_miles">Miles:</label>
-    <input type="number" id="inv_miles" name="inv_miles" required><br><br>
+    <input type="number" id="inv_miles" name="inv_miles" value="<%- inv_miles %>" required><br><br>
 
     <label for="inv_color">Color:</label>
-    <input type="text" id="inv_color" name="inv_color" required><br><br>
+    <input type="text" id="inv_color" name="inv_color" value="<%- inv_color %>" required><br><br>
 
     <input type="submit" value="Update Vehicle" class="login-button">
 </form>
