--- a/views/inventory/deleteconfirm.ejs
+++ b/views/inventory/deleteconfirm.ejs
@@ -15,7 +15,7 @@
   <% } %>
 
 <div class="login-container">
-<form action="/inv/delete/:inventory_id" method="post" id="updateForm">
+<form action="/inv/delete" method="post" id="updateForm">
 
     <label for="inv_make">Make:</label>
     <input type="text" id="inv_make" name="inv_make" value="<%- inv_make %>" readonly required><br><br>
