--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,15 @@
 <header id="top-header">
-    <span class="siteName">
-      <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
+  <span class="siteName">
+    <a href="/" title="Return to home page">CSE Motors</a>
+  </span>
+  <div id="tools">
+    <% if (locals.loggedin) { %>
+      <a title="Welcome <%= locals.accountData.account_firstname %>" href="/account/">
+        Welcome <%= locals.accountData.account_firstname %>
+      </a>
+      <a title="Click to log out" href="/account/logout">Logout</a>
+    <% } else { %>
       <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
-  </header>
+    <% } %>
+  </div>
+</header>
