--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,7 +1,16 @@
 <% if (title) { %>
     <h1><%= title %></h1>
-    <% } else {
-      res.redirect('/')
-    } %>
+<% } else {
+    res.redirect('/')
+} %>
 
 <% messages() %>
+
+<h2>Welcome <%= locals.accountData.account_firstname %></h2>
+
+<a href="/account/update/<%= locals.accountData.account_id %>">Update Account Information</a>
+
+<% if (locals.accountData.account_type === 'Employee' || locals.accountData.account_type === 'Admin') { %>
+    <h3>Inventory Management</h3>
+    <p><a href="/inv/">Access Inventory Management</a></p>
+<% } %>
