--- a/views/account/update.ejs
+++ b/views/account/update.ejs
@@ -6,6 +6,14 @@
 
 <% messages() %>
 
+<% if (errors) { %>
+    <ul class="notice">
+   <% errors.array().forEach(error => { %>
+     <li><%= error.msg %></li>
+  <%  }) %>
+   </ul>
+  <% } %>
+
 <form action="/account/update" method="post">
     <input type="hidden" name="account_id" value="<%= accountData.account_id %>">
     
@@ -18,5 +26,17 @@
     <label for="email">Email:</label>
     <input type="email" name="account_email" id="email" value="<%= accountData.account_email %>">
 
+    <input type="hidden" name="account_id" value="<%= accountData.account_id %>">
+
     <button type="submit">Update Account Information</button>
+</form>
+
+<form action="/account/update-password" method="post">
+    <h2>Change Password</h2>
+    <label for="accountPassword">Password:</label> 
+    <span class="passpg">Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character</span> 
+    <input type="password" name="account_password" id="accountPassword" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+    <br>    
+    <input type="hidden" name="account_id" value="<%= accountData.account_id %>">
+    <input type="submit" value="Change Password">
 </form>
