--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,8 @@
       <a title="Welcome <%= locals.accountData.account_firstname %>" href="/account/">
         Welcome <%= locals.accountData.account_firstname %>
       </a>
+      <a href="/account/feedback">Leave Feedback</a>
+      <a href="/account/view-feedback/<%= locals.accountData.account_id %>">View Feedback</a>
       <a title="Click to log out" href="/account/logout">Logout</a>
     <% } else { %>
       <a title="Click to log in" href="/account/login">My Account</a>
